--- a/homework/hwapp/template/sent/register.html
+++ b/homework/hwapp/template/sent/register.html
@@ -12,6 +12,7 @@
                     <h3 class="text-primary">Create Account</h3>
                 </div>
                 <div class="p-4">
+                    <form  method="POST">
                     <div class="input-group mb-3">
                         <span class="input-group-text bg-primary"><i
                                 class="bi bi-person-plus-fill text-white"></i></span>
@@ -36,6 +37,7 @@
                     <div class="d-grid col-12 mx-auto">
                         <button class="btn btn-primary" type="button"><span></span> Sign up</button>
                     </div>
+                </form>
                     
                 </div>
             </div>
