--- a/homework/hwapp/template/sent/addproduct.html
+++ b/homework/hwapp/template/sent/addproduct.html
@@ -4,72 +4,71 @@
 
 {% block content %}
 
-<!-- title = models.CharField(max_length=200)
-    description = models.TextField(null=True, blank=True)
-    cost = models.DecimalField(max_digits=10,decimal_places=2,null=True , blank=True)
-    quantity = models.IntegerField(null=True, blank=True)
-    instock = models.BooleanField(default=True) -->
-    <center>
-        <h1>Add Product</h1>
-    </center>
 
-   
-
-    {% if warning %}
-        <div class="alert alert-danger" role="alert">
-       <p>{{warning}}</p>
-        </div>
-
-    {% endif %}
+<center>
+    <h1>Add Product</h1>
+</center>
 
 
-    {% if message %}
 
-        <h3>{{ message }}</h3>
-    {% else %}
-        <form method="POST" enctype="multipart/form-data">  <!--enctype="multipart/form-data" ใส่ในกรณีที่ต้องการอัพโหลดไฟล์-->
-                {% csrf_token %}
+{% if warning %}
+<div class="alert alert-danger" role="alert">
+    <p>{{warning}}</p>
+</div>
 
-               
-                    <div class="form-group">
-                    <label for="title">ชื่อสินค้า</label>
-                    <input type="text" class="form-control" id="title" name="title"  required>
-                    </div><br>
-
-                    <div class="form-group">
-                        <label for="description">รายละเอียด:</label>
-                        <textarea  class="form-control" rows="5" id="description" name="description"  placeholder="กรอกรายละเอียดสินค้า" required></textarea>
-                      </div><br>
-                      
-
-                      <div class="form-group">
-                        <label for="price">ราคา</label>
-                        <input type="text" class="form-control" id="price" name="price"  required>
-                        </div><br>
-                    
-                    <div class="form-group">
-                            <label for="quantity">จำนวน</label>
-                            <input type="text" class="form-control" id="quantity" name="quantity" value="1" required>
-                            </div><br>
-                        
-                      
-
-
-                        
-                            <div class="form-group">
-                                <label for="picture">รูปภาพสินค้า</label>
-                                <input type="file" class="form-control-file" id="picture" name="picture">
-                            </div><br>
-
-
-                            <div class="form-group">
-                                <label for="specfile">ไฟล์ spec สินค้า</label>
-                                <input type="file" class="form-control-file" id="specfile" name="specfile">
-                            </div>
-                        
-
-                <button type="submit" class="btn btn-primary">เพิ่มสินค้า</button>
-        </form>
 {% endif %}
 
-{%endblock content %}
+
+{% if message %}
+
+<h3>{{ message }}</h3>
+{% else %}
+
+
+<div class="container-fluid vh-100" style="margin-bottom:200px">
+    <div class="" style="margin-bottom:100px">
+        <div class="rounded d-flex justify-content-center">
+            <div class="col-md-6 col-sm-12 shadow-lg p-5 bg-gradient">
+                <form method="POST" enctype="multipart/form-data">
+                    <!--enctype="multipart/form-data" ใส่ในกรณีที่ต้องการอัพโหลดไฟล์-->
+                    {% csrf_token %}
+                    <div class="p-8">
+                        <div>
+                            <label for="title">ชื่อสินค้า</label>
+                            <input type="text" class="form-control" id="title" name="title" required>
+                        </div>
+                        <div class="mt-3">
+                            <label for="description">รายละเอียด:</label>
+                            <textarea class="form-control" rows="5" id="description" name="description"
+                                placeholder="กรอกรายละเอียดสินค้า" required></textarea>
+                        </div class="mt-3">
+                        <div class="mt-3">
+                            <label for="price">ราคา</label>
+                            <input type="text" class="form-control" id="price" name="price" required>
+                        </div>
+                        <div class="mt-3">
+                            <label for="quantity">จำนวน</label>
+                            <input type="text" class="form-control" id="quantity" name="quantity" value="1" required>
+                        </div>
+                        <div class="mt-3 mb-3">
+                            <label for="picture">รูปภาพสินค้า</label>
+                            <input type="file" class="form-control-file" id="picture" name="picture">
+                        </div>
+                        <div class="mt-3 mb-3">
+                            <label for="specfile">ไฟล์ spec สินค้า</label>
+                            <input type="file" class="form-control-file" id="specfile" name="specfile">
+                        </div>
+                        <button type="submit" class="btn btn-primary">
+                            เพิ่มสินค้า
+                        </button>
+                        
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+
+{% endblock content %}
