--- a/homework/hwapp/template/sent/base.html
+++ b/homework/hwapp/template/sent/base.html
@@ -9,14 +9,14 @@
     <meta name="generator" content="Hugo 0.84.0">
     <title>{% block title %}Project for sent HomeWork{% endblock title %}</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+    
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/cover.css' %}" rel="stylesheet">
+    
     <link href="{% static 'css/from-validation.css' %}" rel="stylesheet">
     
 
@@ -42,33 +42,35 @@
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
   </head>
-  <body class="d-flex h-100 text-center text-white bg-dark">
+  <body class="d-flex w-100 h-100 text-center text-white bg-dark">
     
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Kittipong 77001</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
+        
         {% if user.profile.usertype == 'admin' %}
         
+        <a class="nav-link active" aria-current="page" href="{% url 'home-page' %}">Home</a>
         <a class="nav-link" href="#">Contect List</a>
-        <a class="nav-link" href="#">Add Product</a>
+        <a class="nav-link" href="{% url 'addproduct-page' %}">Add Product</a>
 
         {% else %}
         <a class="nav-link active" aria-current="page" href="{% url 'home-page' %}">Home</a>
         <a class="nav-link" href="#">about us</a>
         <a class="nav-link" href="{% url 'contect-page' %}">Contact</a>
-
+        
         {% endif %}
 
         {% if user.is_authenticated %}
         
         
-        <a class="py-2 text-dark text-decoration-none btn btn-danger" href="{% url 'logout' %}">Logout</a>
+        <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
         {% else %}
         
        
-        <a class="py-2 text-dark text-decoration-none btn btn-primary" href="{% url 'login' %}">Login</a>
+        <a class="nav-link text-primary" href="{% url 'login' %}">Login</a>
        {% endif  %}
       </nav>
     </div>
@@ -84,11 +86,10 @@
      
   </main>
    
-
-<br>
-  <footer class="mt-auto text-white-30">
+  <footer class="mt-auto text-white-50">
     <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
   </footer>
+  
 </div>
   </body>
 </html>
