--- a/homework/hwapp/template/sent/login.html
+++ b/homework/hwapp/template/sent/login.html
@@ -15,17 +15,19 @@
     <div class="" style="margin-bottom:200px">
         <div class="rounded d-flex justify-content-center">
             <div class="col-md-10 col-sm-12 shadow-lg p-5 bg-gradient">
-                <form action="">
+                
                     <div class="p-4">
+                        <form method="POST">
+                            {% csrf_token %}
                         <div class="input-group mb-3">
                             <span class="input-group-text bg-primary"><i
                                     class="bi bi-person-plus-fill text-white"></i>Email</span>
-                            <input type="text" class="form-control" placeholder="Username">
+                            <input type="text" class="form-control" id="username" name="username"placeholder="Username">
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text bg-primary"><i
                                     class="bi bi-key-fill text-white"></i>Password</span>
-                            <input type="password" class="form-control" placeholder="password">
+                            <input type="password" class="form-control" id="password" name="password"placeholder="password">
                         </div>
                         
                         <button class="btn btn-primary text-center mt-2" type="submit">
@@ -36,7 +38,7 @@
                         </p>
                         <a class="text-center text-primary" href="">Forgot your password?</a>
                     </div>
-                </form>
+               
             </div>
         </div>
     </div>
